# OCRmyPDF-AppleOCR

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
ocrmypdf_appleocr/: __init__.py  common.py  hocr.py  livetext.py  pdf.py  vision.py
script/: build.sh  dbg_run.sh  test.py
