[project]
name = "ocrmypdf-appleocr"
dynamic = ["version"]
description = "Plugin to run OCRmyPDF with Apple Vision Framework OCR engine"
authors = [{ name = "Masahiro Kiyota", email = "hiro@juzbox.com" }]
dependencies = [
  "pyobjc-core",
  "pyobjc-framework-Vision",
  "pyobjc-framework-Cocoa",
  "langdetect",
  "ocrmypdf>=14.2.1",
  "Pillow>=10.0.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }

[project.entry-points]


[project.urls]
Homepage = "https://github.com/mkyt/OCRmyPDF-AppleOCR"
Repository = "https://github.com/mkyt/OCRmyPDF-AppleOCR.git"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "build>=1.3.0",
    "ruff>=0.14.0",
]

[tool.setuptools.dynamic]
version = { attr = "ocrmypdf_appleocr.__version__" }

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
